Add a core protobuf POST endpoint
