# gen/Generated/EndpointBindings/app/v1/system.php
@@ -1,0 +1,13 @@
+<?php
+
+declare(strict_types=1);
+
+/**
+ * WARNING: This file is automatically generated
+ * from protobuf definitions. Do not edit manually.
+ *
+ * @return array<class-string, class-string>
+ */
+return array (
+  'App\\Generated\\Transport\\Api\\V1\\SystemService\\DescribeEndpoint' => 'App\\Platform\\Http\\Endpoint\\Api\\V1\\SystemService\\DescribeEndpoint',
+);
