# gen/Generated/RouteManifest/app/v1/system.php
@@ -1,0 +1,24 @@
+<?php
+
+declare(strict_types=1);
+
+/**
+ * WARNING: This file is automatically generated
+ * from protobuf definitions. Do not edit manually.
+ *
+ * @return list<array{
+ *     method: string,
+ *     path: string,
+ *     handler: string,
+ *     operation_id: string
+ * }>
+ */
+return array (
+  0 => 
+  array (
+    'method' => 'POST',
+    'path' => '/api/v1/system/describe',
+    'handler' => 'App\\Generated\\Transport\\Api\\V1\\SystemService\\DescribeHttpHandler',
+    'operation_id' => 'SystemService.Describe',
+  ),
+);
