# protos/gen/App/Api/V1/SystemDescribeRequest.php
@@ -1,0 +1,114 @@
+<?php
+# Generated by the protocol buffer compiler.  DO NOT EDIT!
+# source: app/v1/system.proto
+
+namespace App\Api\V1;
+
+use Google\Protobuf\Internal\GPBType;
+use Google\Protobuf\Internal\RepeatedField;
+use Google\Protobuf\Internal\GPBUtil;
+
+/**
+ * SystemDescribeRequest carries a neutral POST body for testing transport generation.
+ *
+ * Generated from protobuf message <code>app.v1.SystemDescribeRequest</code>
+ */
+class SystemDescribeRequest extends \Google\Protobuf\Internal\Message
+{
+    /**
+     * Generated from protobuf field <code>string caller = 1 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     */
+    protected $caller = '';
+    /**
+     * Generated from protobuf field <code>repeated string requested_capabilities = 2 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     */
+    private $requested_capabilities;
+    /**
+     * Generated from protobuf field <code>bool include_runtime = 3 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     */
+    protected $include_runtime = false;
+
+    /**
+     * Constructor.
+     *
+     * @param array $data {
+     *     Optional. Data for populating the Message object.
+     *
+     *     @type string $caller
+     *     @type array<string>|\Google\Protobuf\Internal\RepeatedField $requested_capabilities
+     *     @type bool $include_runtime
+     * }
+     */
+    public function __construct($data = NULL) {
+        \App\Api\V1\Metadata\System::initOnce();
+        parent::__construct($data);
+    }
+
+    /**
+     * Generated from protobuf field <code>string caller = 1 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @return string
+     */
+    public function getCaller()
+    {
+        return $this->caller;
+    }
+
+    /**
+     * Generated from protobuf field <code>string caller = 1 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @param string $var
+     * @return $this
+     */
+    public function setCaller($var)
+    {
+        GPBUtil::checkString($var, True);
+        $this->caller = $var;
+
+        return $this;
+    }
+
+    /**
+     * Generated from protobuf field <code>repeated string requested_capabilities = 2 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @return \Google\Protobuf\Internal\RepeatedField
+     */
+    public function getRequestedCapabilities()
+    {
+        return $this->requested_capabilities;
+    }
+
+    /**
+     * Generated from protobuf field <code>repeated string requested_capabilities = 2 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @param array<string>|\Google\Protobuf\Internal\RepeatedField $var
+     * @return $this
+     */
+    public function setRequestedCapabilities($var)
+    {
+        $arr = GPBUtil::checkRepeatedField($var, \Google\Protobuf\Internal\GPBType::STRING);
+        $this->requested_capabilities = $arr;
+
+        return $this;
+    }
+
+    /**
+     * Generated from protobuf field <code>bool include_runtime = 3 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @return bool
+     */
+    public function getIncludeRuntime()
+    {
+        return $this->include_runtime;
+    }
+
+    /**
+     * Generated from protobuf field <code>bool include_runtime = 3 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @param bool $var
+     * @return $this
+     */
+    public function setIncludeRuntime($var)
+    {
+        GPBUtil::checkBool($var);
+        $this->include_runtime = $var;
+
+        return $this;
+    }
+
+}
+
