# protos/gen/App/Api/V1/SystemDescribeResponse.php
@@ -1,0 +1,195 @@
+<?php
+# Generated by the protocol buffer compiler.  DO NOT EDIT!
+# source: app/v1/system.proto
+
+namespace App\Api\V1;
+
+use Google\Protobuf\Internal\GPBType;
+use Google\Protobuf\Internal\RepeatedField;
+use Google\Protobuf\Internal\GPBUtil;
+
+/**
+ * SystemDescribeResponse describes the current neutral runtime state.
+ *
+ * Generated from protobuf message <code>app.v1.SystemDescribeResponse</code>
+ */
+class SystemDescribeResponse extends \Google\Protobuf\Internal\Message
+{
+    /**
+     * Generated from protobuf field <code>string name = 1 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     */
+    protected $name = '';
+    /**
+     * Generated from protobuf field <code>string mode = 2 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     */
+    protected $mode = '';
+    /**
+     * Generated from protobuf field <code>string caller = 3 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     */
+    protected $caller = '';
+    /**
+     * Generated from protobuf field <code>repeated string capabilities = 4 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     */
+    private $capabilities;
+    /**
+     * Generated from protobuf field <code>bool runtime_included = 5 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     */
+    protected $runtime_included = false;
+    /**
+     * Generated from protobuf field <code>int64 timestamp = 6 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     */
+    protected $timestamp = 0;
+
+    /**
+     * Constructor.
+     *
+     * @param array $data {
+     *     Optional. Data for populating the Message object.
+     *
+     *     @type string $name
+     *     @type string $mode
+     *     @type string $caller
+     *     @type array<string>|\Google\Protobuf\Internal\RepeatedField $capabilities
+     *     @type bool $runtime_included
+     *     @type int|string $timestamp
+     * }
+     */
+    public function __construct($data = NULL) {
+        \App\Api\V1\Metadata\System::initOnce();
+        parent::__construct($data);
+    }
+
+    /**
+     * Generated from protobuf field <code>string name = 1 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @return string
+     */
+    public function getName()
+    {
+        return $this->name;
+    }
+
+    /**
+     * Generated from protobuf field <code>string name = 1 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @param string $var
+     * @return $this
+     */
+    public function setName($var)
+    {
+        GPBUtil::checkString($var, True);
+        $this->name = $var;
+
+        return $this;
+    }
+
+    /**
+     * Generated from protobuf field <code>string mode = 2 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @return string
+     */
+    public function getMode()
+    {
+        return $this->mode;
+    }
+
+    /**
+     * Generated from protobuf field <code>string mode = 2 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @param string $var
+     * @return $this
+     */
+    public function setMode($var)
+    {
+        GPBUtil::checkString($var, True);
+        $this->mode = $var;
+
+        return $this;
+    }
+
+    /**
+     * Generated from protobuf field <code>string caller = 3 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @return string
+     */
+    public function getCaller()
+    {
+        return $this->caller;
+    }
+
+    /**
+     * Generated from protobuf field <code>string caller = 3 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @param string $var
+     * @return $this
+     */
+    public function setCaller($var)
+    {
+        GPBUtil::checkString($var, True);
+        $this->caller = $var;
+
+        return $this;
+    }
+
+    /**
+     * Generated from protobuf field <code>repeated string capabilities = 4 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @return \Google\Protobuf\Internal\RepeatedField
+     */
+    public function getCapabilities()
+    {
+        return $this->capabilities;
+    }
+
+    /**
+     * Generated from protobuf field <code>repeated string capabilities = 4 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @param array<string>|\Google\Protobuf\Internal\RepeatedField $var
+     * @return $this
+     */
+    public function setCapabilities($var)
+    {
+        $arr = GPBUtil::checkRepeatedField($var, \Google\Protobuf\Internal\GPBType::STRING);
+        $this->capabilities = $arr;
+
+        return $this;
+    }
+
+    /**
+     * Generated from protobuf field <code>bool runtime_included = 5 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @return bool
+     */
+    public function getRuntimeIncluded()
+    {
+        return $this->runtime_included;
+    }
+
+    /**
+     * Generated from protobuf field <code>bool runtime_included = 5 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @param bool $var
+     * @return $this
+     */
+    public function setRuntimeIncluded($var)
+    {
+        GPBUtil::checkBool($var);
+        $this->runtime_included = $var;
+
+        return $this;
+    }
+
+    /**
+     * Generated from protobuf field <code>int64 timestamp = 6 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @return int|string
+     */
+    public function getTimestamp()
+    {
+        return $this->timestamp;
+    }
+
+    /**
+     * Generated from protobuf field <code>int64 timestamp = 6 [(.grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {</code>
+     * @param int|string $var
+     * @return $this
+     */
+    public function setTimestamp($var)
+    {
+        GPBUtil::checkInt64($var);
+        $this->timestamp = $var;
+
+        return $this;
+    }
+
+}
+
