# protos/gen/Grpc/Gateway/Protoc_gen_openapiv2/Options/EnumSchema.php
@@ -1,0 +1,360 @@
+<?php
+# Generated by the protocol buffer compiler.  DO NOT EDIT!
+# source: protoc-gen-openapiv2/options/openapiv2.proto
+
+namespace Grpc\Gateway\Protoc_gen_openapiv2\Options;
+
+use Google\Protobuf\Internal\GPBType;
+use Google\Protobuf\Internal\RepeatedField;
+use Google\Protobuf\Internal\GPBUtil;
+
+/**
+ * `EnumSchema` is subset of fields from the OpenAPI v2 specification's Schema object.
+ * Only fields that are applicable to Enums are included
+ * See: https://github.com/OAI/OpenAPI-Specification/blob/3.0.0/versions/2.0.md#schemaObject
+ * Example:
+ *  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_enum) = {
+ *    ...
+ *    title: "MyEnum";
+ *    description:"This is my nice enum";
+ *    example: "ZERO";
+ *    required: true;
+ *    ...
+ *  };
+ *
+ * Generated from protobuf message <code>grpc.gateway.protoc_gen_openapiv2.options.EnumSchema</code>
+ */
+class EnumSchema extends \Google\Protobuf\Internal\Message
+{
+    /**
+     * A short description of the schema.
+     *
+     * Generated from protobuf field <code>string description = 1;</code>
+     */
+    protected $description = '';
+    /**
+     * Generated from protobuf field <code>string default = 2;</code>
+     */
+    protected $default = '';
+    /**
+     * The title of the schema.
+     *
+     * Generated from protobuf field <code>string title = 3;</code>
+     */
+    protected $title = '';
+    /**
+     * Generated from protobuf field <code>bool required = 4;</code>
+     */
+    protected $required = false;
+    /**
+     * Generated from protobuf field <code>bool read_only = 5;</code>
+     */
+    protected $read_only = false;
+    /**
+     * Additional external documentation for this schema.
+     *
+     * Generated from protobuf field <code>.grpc.gateway.protoc_gen_openapiv2.options.ExternalDocumentation external_docs = 6;</code>
+     */
+    protected $external_docs = null;
+    /**
+     * Generated from protobuf field <code>string example = 7;</code>
+     */
+    protected $example = '';
+    /**
+     * Ref is used to define an external reference to include in the message.
+     * This could be a fully qualified proto message reference, and that type must
+     * be imported into the protofile. If no message is identified, the Ref will
+     * be used verbatim in the output.
+     * For example:
+     *  `ref: ".google.protobuf.Timestamp"`.
+     *
+     * Generated from protobuf field <code>string ref = 8;</code>
+     */
+    protected $ref = '';
+    /**
+     * Custom properties that start with "x-" such as "x-foo" used to describe
+     * extra functionality that is not covered by the standard OpenAPI Specification.
+     * See: https://swagger.io/docs/specification/2-0/swagger-extensions/
+     *
+     * Generated from protobuf field <code>map<string, .google.protobuf.Value> extensions = 9;</code>
+     */
+    private $extensions;
+
+    /**
+     * Constructor.
+     *
+     * @param array $data {
+     *     Optional. Data for populating the Message object.
+     *
+     *     @type string $description
+     *           A short description of the schema.
+     *     @type string $default
+     *     @type string $title
+     *           The title of the schema.
+     *     @type bool $required
+     *     @type bool $read_only
+     *     @type \Grpc\Gateway\Protoc_gen_openapiv2\Options\ExternalDocumentation $external_docs
+     *           Additional external documentation for this schema.
+     *     @type string $example
+     *     @type string $ref
+     *           Ref is used to define an external reference to include in the message.
+     *           This could be a fully qualified proto message reference, and that type must
+     *           be imported into the protofile. If no message is identified, the Ref will
+     *           be used verbatim in the output.
+     *           For example:
+     *            `ref: ".google.protobuf.Timestamp"`.
+     *     @type array|\Google\Protobuf\Internal\MapField $extensions
+     *           Custom properties that start with "x-" such as "x-foo" used to describe
+     *           extra functionality that is not covered by the standard OpenAPI Specification.
+     *           See: https://swagger.io/docs/specification/2-0/swagger-extensions/
+     * }
+     */
+    public function __construct($data = NULL) {
+        \GPBMetadata\ProtocGenOpenapiv2\Options\Openapiv2::initOnce();
+        parent::__construct($data);
+    }
+
+    /**
+     * A short description of the schema.
+     *
+     * Generated from protobuf field <code>string description = 1;</code>
+     * @return string
+     */
+    public function getDescription()
+    {
+        return $this->description;
+    }
+
+    /**
+     * A short description of the schema.
+     *
+     * Generated from protobuf field <code>string description = 1;</code>
+     * @param string $var
+     * @return $this
+     */
+    public function setDescription($var)
+    {
+        GPBUtil::checkString($var, True);
+        $this->description = $var;
+
+        return $this;
+    }
+
+    /**
+     * Generated from protobuf field <code>string default = 2;</code>
+     * @return string
+     */
+    public function getDefault()
+    {
+        return $this->default;
+    }
+
+    /**
+     * Generated from protobuf field <code>string default = 2;</code>
+     * @param string $var
+     * @return $this
+     */
+    public function setDefault($var)
+    {
+        GPBUtil::checkString($var, True);
+        $this->default = $var;
+
+        return $this;
+    }
+
+    /**
+     * The title of the schema.
+     *
+     * Generated from protobuf field <code>string title = 3;</code>
+     * @return string
+     */
+    public function getTitle()
+    {
+        return $this->title;
+    }
+
+    /**
+     * The title of the schema.
+     *
+     * Generated from protobuf field <code>string title = 3;</code>
+     * @param string $var
+     * @return $this
+     */
+    public function setTitle($var)
+    {
+        GPBUtil::checkString($var, True);
+        $this->title = $var;
+
+        return $this;
+    }
+
+    /**
+     * Generated from protobuf field <code>bool required = 4;</code>
+     * @return bool
+     */
+    public function getRequired()
+    {
+        return $this->required;
+    }
+
+    /**
+     * Generated from protobuf field <code>bool required = 4;</code>
+     * @param bool $var
+     * @return $this
+     */
+    public function setRequired($var)
+    {
+        GPBUtil::checkBool($var);
+        $this->required = $var;
+
+        return $this;
+    }
+
+    /**
+     * Generated from protobuf field <code>bool read_only = 5;</code>
+     * @return bool
+     */
+    public function getReadOnly()
+    {
+        return $this->read_only;
+    }
+
+    /**
+     * Generated from protobuf field <code>bool read_only = 5;</code>
+     * @param bool $var
+     * @return $this
+     */
+    public function setReadOnly($var)
+    {
+        GPBUtil::checkBool($var);
+        $this->read_only = $var;
+
+        return $this;
+    }
+
+    /**
+     * Additional external documentation for this schema.
+     *
+     * Generated from protobuf field <code>.grpc.gateway.protoc_gen_openapiv2.options.ExternalDocumentation external_docs = 6;</code>
+     * @return \Grpc\Gateway\Protoc_gen_openapiv2\Options\ExternalDocumentation|null
+     */
+    public function getExternalDocs()
+    {
+        return $this->external_docs;
+    }
+
+    public function hasExternalDocs()
+    {
+        return isset($this->external_docs);
+    }
+
+    public function clearExternalDocs()
+    {
+        unset($this->external_docs);
+    }
+
+    /**
+     * Additional external documentation for this schema.
+     *
+     * Generated from protobuf field <code>.grpc.gateway.protoc_gen_openapiv2.options.ExternalDocumentation external_docs = 6;</code>
+     * @param \Grpc\Gateway\Protoc_gen_openapiv2\Options\ExternalDocumentation $var
+     * @return $this
+     */
+    public function setExternalDocs($var)
+    {
+        GPBUtil::checkMessage($var, \Grpc\Gateway\Protoc_gen_openapiv2\Options\ExternalDocumentation::class);
+        $this->external_docs = $var;
+
+        return $this;
+    }
+
+    /**
+     * Generated from protobuf field <code>string example = 7;</code>
+     * @return string
+     */
+    public function getExample()
+    {
+        return $this->example;
+    }
+
+    /**
+     * Generated from protobuf field <code>string example = 7;</code>
+     * @param string $var
+     * @return $this
+     */
+    public function setExample($var)
+    {
+        GPBUtil::checkString($var, True);
+        $this->example = $var;
+
+        return $this;
+    }
+
+    /**
+     * Ref is used to define an external reference to include in the message.
+     * This could be a fully qualified proto message reference, and that type must
+     * be imported into the protofile. If no message is identified, the Ref will
+     * be used verbatim in the output.
+     * For example:
+     *  `ref: ".google.protobuf.Timestamp"`.
+     *
+     * Generated from protobuf field <code>string ref = 8;</code>
+     * @return string
+     */
+    public function getRef()
+    {
+        return $this->ref;
+    }
+
+    /**
+     * Ref is used to define an external reference to include in the message.
+     * This could be a fully qualified proto message reference, and that type must
+     * be imported into the protofile. If no message is identified, the Ref will
+     * be used verbatim in the output.
+     * For example:
+     *  `ref: ".google.protobuf.Timestamp"`.
+     *
+     * Generated from protobuf field <code>string ref = 8;</code>
+     * @param string $var
+     * @return $this
+     */
+    public function setRef($var)
+    {
+        GPBUtil::checkString($var, True);
+        $this->ref = $var;
+
+        return $this;
+    }
+
+    /**
+     * Custom properties that start with "x-" such as "x-foo" used to describe
+     * extra functionality that is not covered by the standard OpenAPI Specification.
+     * See: https://swagger.io/docs/specification/2-0/swagger-extensions/
+     *
+     * Generated from protobuf field <code>map<string, .google.protobuf.Value> extensions = 9;</code>
+     * @return \Google\Protobuf\Internal\MapField
+     */
+    public function getExtensions()
+    {
+        return $this->extensions;
+    }
+
+    /**
+     * Custom properties that start with "x-" such as "x-foo" used to describe
+     * extra functionality that is not covered by the standard OpenAPI Specification.
+     * See: https://swagger.io/docs/specification/2-0/swagger-extensions/
+     *
+     * Generated from protobuf field <code>map<string, .google.protobuf.Value> extensions = 9;</code>
+     * @param array|\Google\Protobuf\Internal\MapField $var
+     * @return $this
+     */
+    public function setExtensions($var)
+    {
+        $arr = GPBUtil::checkMapField($var, \Google\Protobuf\Internal\GPBType::STRING, \Google\Protobuf\Internal\GPBType::MESSAGE, \Google\Protobuf\Value::class);
+        $this->extensions = $arr;
+
+        return $this;
+    }
+
+}
+
